--- a/kong/Dockerfile
+++ b/kong/Dockerfile
@@ -13,7 +13,13 @@ RUN export CP_SHA1=e886899467ced6d7c76027d58c7f7554c2fb2bcc \
 COPY containerpilot.json /etc/containerpilot.json
 ENV CONTAINERPILOT=file:///etc/containerpilot.json
 
+# kong config
 COPY kong.conf /etc/kong/kong.conf
 CMD /bin/containerpilot kong start --conf ./etc/kong/kong.conf
+
+# copy over custom plugin for syslog
+#RUN mkdir /usr/local/share/lua/5.1/kong/plugins/stdout-log
+#COPY ./plugins/stdout-log/handler.lua /usr/local/share/lua/5.1/kong/plugins/stdout-log
+#COPY ./plugins/stdout-log/scema.lua /usr/local/share/lua/5.1/kong/plugins/stdout-log
 
 EXPOSE 8000 8443 8001 7946
