--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -4,7 +4,7 @@ input {
     codec => json
   }
   file {
-	path => "/usr/local/kong/logs/*"
+	path => ["/kong-logs/access.log", "/kong-logs/admin_access.log", "/kong-logs/error.log"]
   }
 }
 
