logstash is getting all logs :)

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -4,7 +4,7 @@ input {
     codec => json
   }
   file {
-	path => ["/kong-logs/access.log", "/kong-logs/admin_access.log", "/kong-logs/error.log"]
+	path => ["/usr/share/logstash/kong-logs/*.log", "/kong-logs/*.log", "/../../kong-logs/*.log"]
   }
 }
 
