--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -3,8 +3,8 @@ input {
     port => 12345
     codec => json
   }
-  file {
-	path => ["/usr/share/logstash/kong-logs/*.log", "/kong-logs/*.log", "/../../kong-logs/*.log"]
+  beats {
+    port => 5044
   }
 }
 
